--- a/src/components/AboutMe/style.css
+++ b/src/components/AboutMe/style.css
@@ -3,6 +3,45 @@
     margin-top: 2px;
 }
 
-.about-name {
+/* .about-name {
     color: darkblue;
-}
+} */
+
+.about {
+    flex-direction: column;
+    margin-top: 3em;
+  }
+  
+  .about-name {
+    color: darkblue;
+  }
+  
+  .about-role {
+    margin-top: 1.2em;
+  }
+  
+  .about-desc {
+    font-size: 1rem;
+    max-width: 600px;
+  }
+  
+  .about-desc,
+  .about-contact {
+    margin-top: 2.4em;
+  }
+  
+  .about .link--icon {
+    margin-right: 0.8em;
+  }
+  
+  .about .btn--outline {
+    margin-right: 1em;
+  }
+  
+  @media (max-width: 600px) {
+    .app .about {
+      align-items: flex-start;
+      margin-top: 2em;
+    }
+  }
+  
