--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -1,9 +1,10 @@
 .active {
-  background-color: brown;
+  background-color: rgb(214, 207, 146);
 }
 
 ul {
-  border: 2px red solid;
+  border: 2px ;
   display: flex;
   justify-content: space-between;
+  list-style-type: none;
 }
