--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -1,7 +1,16 @@
 .pr-grid {
-  max-width: 1100px;
+  max-width: 5000px;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
   grid-gap: 2em;
+}
+
+.pr-container {
+  align-items: center;
+  position: relative;
+}
+
+.h2 {
+  text-align: justify;
 }
