--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -7,9 +7,17 @@
     justify-content: center;
     flex-direction: row;
   }
+
+  ul {
+    list-style-type: none;
+  }
   
   .skills-list-item {
     margin: 0.5em;
+    display: block;
+    padding: 0.8em 1.4em;
+    font-weight: 500;
+    font-size: .9em;
   }
 
   .skills-title {
