--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -1,11 +1,13 @@
 .skills-list {
-    max-width: 450px;
+    /* max-width: 450px; */
     width: 95%;
-    margin: 0 auto;
+    margin: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    flex-direction: row;
+    /* flex-direction: row; */
+    background-color: white;
+    text-shadow: 20px;
   }
 
   ul {
